--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.CursoAndroid"
         tools:targetApi="31">
         <activity
+            android:name=".imccalculator.ResultImcActivity"
+            android:exported="false" />
+        <activity
             android:name=".imccalculator.ImcActivity"
             android:exported="false" />
         <activity
@@ -29,7 +32,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
