--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.CursoAndroid"
         tools:targetApi="31">
         <activity
+            android:name=".todoapp.TodoAppActivity"
+            android:theme="@style/Theme.TODOApp"
+            android:exported="false" />
+        <activity
             android:name=".imccalculator.ResultImcActivity"
             android:exported="false" />
         <activity
